# rustls-ffi

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-ISC  LICENSE-MIT  Makefile  Makefile.Windows  Makefile.pkg-config  README-crates.io.md  README.md  WORKSPACE  build.rs  cbindgen.toml  cbindgen_rules.txt  minica-key.pem  minica.pem  test.sh  update_bazel.sh
.github/workflows/: artifacts.yaml  daily-tests.yml  docs.yaml  pkg-config.yaml  test.yaml
cargo/: crates.bzl
cargo/remote/: BUILD.ansi_term-0.11.0.bazel  BUILD.atty-0.2.14.bazel  BUILD.cbindgen-0.18.0.bazel  BUILD.clap-2.33.3.bazel  BUILD.getrandom-0.2.2.bazel  BUILD.itoa-0.4.7.bazel  BUILD.log-0.4.14.bazel  BUILD.rand-0.8.3.bazel  BUILD.ring-0.16.20.bazel  BUILD.rustls-0.19.0.bazel  BUILD.rustls-native-certs-0.5.0.bazel  BUILD.rustls-pemfile-0.2.0.bazel  BUILD.security-framework-2.1.2.bazel  BUILD.security-framework-sys-2.1.1.bazel  BUILD.serde_derive-1.0.125.bazel  BUILD.strsim-0.8.0.bazel  BUILD.syn-1.0.64.bazel  BUILD.tempfile-3.2.0.bazel  BUILD.textwrap-0.11.0.bazel  BUILD.wasm-bindgen-0.2.72.bazel  BUILD.wasm-bindgen-backend-0.2.72.bazel  BUILD.wasm-bindgen-macro-support-0.2.72.bazel  BUILD.web-sys-0.3.49.bazel  BUILD.webpki-0.21.4.bazel  BUILD.winapi-0.3.9.bazel
cmake/: format.cmake  options.cmake  rust.cmake
debian/: build.sh
librustls/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
librustls/cmake/: custom_function_defs.txt  options.cmake  rust.cmake
librustls/src/: acceptor.rs  certificate.rs  cipher.rs  client.rs  connection.rs  crypto_provider.rs  enums.rs  error.rs  ffi.rs  keylog.rs  lib.rs  log.rs  panic.rs  rslice.rs  rustls.h  server.rs  session.rs  userdata.rs  verifier.rs  version.rs
librustls/testdata/: minica-key.pem  minica.pem  test.crl.pem
librustls/testdata/example.com/: cert.pem  key.pem
librustls/testdata/localhost/: cert.pem
librustls/tests/: CMakeLists.txt  client.c  client.h  client_server.rs  common.c  ech_fetch.rs  rustls_version.rs  server.c  static_libs.rs
localhost/: cert.pem  key.pem
src/: BUILD.bazel  acceptor.rs  base.rs  certificate.rs  cipher.rs  client.rs  connection.rs  constants.rs  crustls.h  crypto_provider.rs  enums.rs  error.rs  io.rs  lib.rs  log.rs  main.c  panic.rs  rslice.rs  rustls.h  server.rs  session.rs  verifier.rs
testdata/: test.crl.pem
testdata/example.com/: cert.pem  key.pem
testdata/localhost/: key.pem
tests/: CMakeLists.txt  client-server.py  client.c  client.h  client_server.rs  common.c  common.h  ech_fetch.rs  rustls_version.rs  server.c  server.h  static_libs.rs  verify-static-libraries.py  verify-static-libraries.sh
tools/: Cargo.toml  README.md
tools/src/: ech_fetch.rs
tools/tests/: rustls_header_version.rs
website/: README.md  config.toml
website/content/: _index.md
website/static/: api.json  style.css
website/templates/: _api_section.html  base.html  index.html  macros.html
