[workspace]
members = [
    # FFI bindings for Rustls
    "librustls",
    # Admin tooling & test utilities for rustls-ffi developers
    "tools"
]

default-members = [
    "librustls",
    "tools"
]
resolver = "2"

[workspace.dependencies]
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-post-quantum = { version = "0.2.2" }
webpki = { package = "rustls-webpki", version = "0.102.0", default-features = false, features = ["std"] }
libc = "0.2"
log = "0.4.22"
rustls-platform-verifier = "0.5"
rand = "0.8"
regex = "1.9.6"
toml = { version = "0.6.0", default-features = false, features = ["parse"] }
hickory-resolver = { version = "=0.25.0-alpha.4", features = ["dns-over-https-rustls", "webpki-roots"] }
tokio = { version = "1.42.0", features = ["io-util", "macros", "net", "rt"] }

# TODO(@cpu): remove this once Rustls 0.23.21 w/ built-in post-quantum support (rustls/rustls#2288) is published.
#             we want to avoid rustls-post-quantum 0.2.1 because it activates aws-lc-rs/non-fips
#             and so conflicts with our fips feature when running cbindgen with everything activated.
[patch.crates-io]
rustls = { git = 'https://github.com/cpu/rustls.git', rev = '2008a03eff1f608467a70915109dc100129143d0' }
rustls-post-quantum = { git = 'https://github.com/cpu/rustls.git', rev = '2008a03eff1f608467a70915109dc100129143d0' }
