[workspace]
members = [
    # FFI bindings for Rustls
    "librustls",
    # Admin tooling & test utilities for rustls-ffi developers
    "tools"
]

default-members = [
    "librustls",
]
resolver = "2"

[workspace.dependencies]
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
webpki = { package = "rustls-webpki", version = "0.103", default-features = false, features = ["std"] }
libc = "0.2"
log = "0.4.27"
rustls-platform-verifier = "0.5.1"
regex = "1.9.6"
toml = { version = "0.6.0", default-features = false, features = ["parse"] }
hickory-resolver = { version = "0.25", features = ["https-aws-lc-rs", "webpki-roots"] }
tokio = { version = "1.44.0", features = ["io-util", "macros", "net", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# TODO(@cpu): handle breaking API changes for tree-sitter 0.24.
#   This is blocked on a tree-sitter-md release for the tree-sitter 0.24 update
#   presently unreleased on upstream main.
tree-sitter = "0.23" 
tree-sitter-c = "0.23"
tree-sitter-md = "0.3"
