load("@rules_rust//rust:rust.bzl", "rust_library", "rust_test")

rust_library(
    name = "crustls_rust",
    srcs = [
    	 "cipher.rs",
	 "client.rs",
	 "enums.rs",
	 "error.rs",
	 "lib.rs",
	 "rslice.rs",
	 "server.rs",
	 "session.rs",
    ],
    deps = [
    	 "//:libc",
	 "//:rustls",
	 "//:rustls_native_certs",
	 "//:rustls_pemfile",
	 "//:sct",
	 "//:webpki",
    ],
)
