[package]
name = "rustls-ffi-tools"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rustls = { workspace = true }
rustls-ffi = { path = "../librustls" }
hickory-resolver = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-md = { workspace = true, features = ["parser"] }
